# DoToDo2

./: README.md  build-ut-app.sh  capacitor.config.ts  index.html  ionic.config.json  package-lock.json  package.json  run-ut-app.sh  vite.config.ts.timestamp-1682471333937.mjs
src/: App.tsx  contstants.ts  main.tsx  util.ts
src/data/: storage.ts
src/hooks/: useTasksStorage.ts
src/pages/: Tab2.tsx
src/pages/tasks/: CreateEditTask.tsx  Tasks.tsx  styles.ts  types.ts  util.ts
src/recoil/task/: atom.ts  index.ts  withId.ts
ut/: .gitignore  Cargo.toml  LICENSE  README.md  clickable.yaml  dotodo2.desktop  manifest.json
ut/po/: dotodo2.jitto.pot  testrust1.jitto.pot
ut/qml/: Main.qml
ut/src/: build.rs  main.rs
