[package]
name = "dotodo2"
version = "1.0.0"
authors = ["Jitto P Jose <jittopjose@gmail.com>"]
edition = "2018"
build = "src/build.rs"

[dependencies]
qmetaobject = "0.2.3"
gettext-rs = "0.7"
cstr = "0.2.8"
cpp = "0.5"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[build-dependencies]
cpp_build = "0.5"
